adding env and build spec for pipeline

--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,4 @@
 # AWS_ACCESS_KEY_ID=<your access key>
 # AWS_SECRET_ACCESS_KEY=<your secret access key>
 
-SECRET_MESSAGE="This is Production."
+STAGE="prod"
