--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "LMS for K-12, Senior Capstone Project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/example.test.ts"
   },
   "author": "Matt Cuento",
   "license": "ISC",
