--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "graphql": "^15.4.0",
     "graphql-type-json": "^0.3.2",
     "react": "^17.0.1",
-    "serverless": "^2.25.2"
+    "serverless": "^2.25.2",
+    "uid": "^2.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
