--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.1.0",
     "@aws-sdk/util-dynamodb": "^3.1.0",
+    "@southlane/cognito-jwt-verifier": "^0.1.7",
     "apollo-server": "^2.19.1",
     "apollo-server-lambda": "^2.21.0",
     "graphql": "^15.4.0",
