update yml and .env

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 # to deploy your app https://github.com/serverless/components#credentials
 
 # AWS:
-# AWS_ACCESS_KEY_ID=<your access key>
-# AWS_SECRET_ACCESS_KEY=<your secret access key>
+# AWS_ACCESS_KEY_ID=AKIAWHEEV7QBZTR3FJ5A
+# AWS_SECRET_ACCESS_KEY=gNBtzZWf7vaMsuScrgke7t/C7NahHZoTET9wD5mA
 
-STAGE="dev"
+STAGE="dev-greasystallions"
