--- a/package.json
+++ b/package.json
@@ -4,31 +4,42 @@
   "description": "LMS for K-12, Senior Capstone Project.",
   "main": "apollo-server.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register src/test/*"
+    "test": "mocha -r ts-node/register src/test/*",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "deploy": "NODE_ENV=production sls deploy",
+    "debug": "export SLS_DEBUG=* NODE_ENV=development && node --inspect node_modules/.bin/sls offline -s dev"
   },
   "author": "Matt Cuento",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.1.0",
     "@aws-sdk/util-dynamodb": "^3.1.0",
+    "@graphql-tools/load-files": "^6.3.0",
+    "@graphql-tools/merge": "^6.2.10",
+    "@types/graphql-iso-date": "^3.4.0",
     "@southlane/cognito-jwt-verifier": "^0.1.7",
     "apollo-server": "^2.19.1",
     "apollo-server-lambda": "^2.21.0",
     "graphql": "^15.4.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-type-json": "^0.3.2",
-    "react": "^17.0.1",
-    "serverless": "^2.25.2"
+    "serverless": "^2.32.1",
+    "uid": "^2.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "chai": "^4.3.1",
+    "eslint": "^7.23.0",
     "mocha": "^8.3.0",
     "serverless-dotenv-plugin": "^3.3.0",
+    "serverless-dynamodb-client": "0.0.2",
+    "serverless-dynamodb-local": "^0.2.39",
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.3.5",
+    "superagent": "^6.1.0",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5",
+    "typescript": "^4.2.3",
     "typings": "^2.1.1",
     "webpack": "^5.22.0",
     "webpack-node-externals": "^2.5.2"
