--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "LMS for K-12, Senior Capstone Project.",
   "main": "apollo-server.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register src/test/*",
+    "test": "NODE_ENV=development jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "deploy": "NODE_ENV=production sls deploy",
-    "debug": "export SLS_DEBUG=* NODE_ENV=development && node --inspect node_modules/.bin/sls offline -s dev"
+    "debug": "SLS_DEBUG=* NODE_ENV=development node --inspect node_modules/.bin/sls offline -s dev"
   },
   "author": "Matt Cuento",
   "license": "ISC",
@@ -16,8 +16,8 @@
     "@aws-sdk/util-dynamodb": "^3.1.0",
     "@graphql-tools/load-files": "^6.3.0",
     "@graphql-tools/merge": "^6.2.10",
-    "@types/graphql-iso-date": "^3.4.0",
     "@southlane/cognito-jwt-verifier": "^0.1.7",
+    "@types/graphql-iso-date": "^3.4.0",
     "apollo-server": "^2.19.1",
     "apollo-server-lambda": "^2.21.0",
     "graphql": "^15.4.0",
@@ -28,8 +28,10 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
+    "@types/jest": "^26.0.22",
     "chai": "^4.3.1",
     "eslint": "^7.23.0",
+    "jest": "^26.6.3",
     "mocha": "^8.3.0",
     "serverless-dotenv-plugin": "^3.3.0",
     "serverless-dynamodb-client": "0.0.2",
@@ -37,6 +39,7 @@
     "serverless-offline": "^6.8.0",
     "serverless-webpack": "^5.3.5",
     "superagent": "^6.1.0",
+    "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
