--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,15 +1,15 @@
 {
-  "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "endOfLine": "lf",
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": false,
-  "printWidth": 80,
-  "proseWrap": "preserve",
-  "quoteProps": "as-needed",
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "all",
-  "useTabs": false
-}
+   "arrowParens": "avoid",
+   "bracketSpacing": true,
+   "endOfLine": "lf",
+   "jsxBracketSameLine": false,
+   "jsxSingleQuote": false,
+   "printWidth": 100,
+   "proseWrap": "preserve",
+   "quoteProps": "as-needed",
+   "semi": true,
+   "singleQuote": false,
+   "tabWidth": 3,
+   "trailingComma": "none",
+   "useTabs": false
+ }
