--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,22 @@
 {
-  "compilerOptions": {
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "esnext"
-    ],
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "outDir": ".build",
-    "preserveConstEnums": true,
-    "rootDir": "./",
-    "target": "es6",
-    "removeComments": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true
-  },
-  "files": [
-    "src/@types/graphql.d.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "src/**/*.test.ts"
-  ],
-  "include": [
-    "src/**/*",
-    "test",
-  ]
+   "compilerOptions": {
+      "emitDecoratorMetadata": true,
+      "esModuleInterop": true,
+      "experimentalDecorators": true,
+      "forceConsistentCasingInFileNames": true,
+      "lib": ["esnext"],
+      "module": "CommonJS",
+      "moduleResolution": "node",
+      "outDir": ".build",
+      "preserveConstEnums": true,
+      "rootDir": "./",
+      "target": "es6",
+      "removeComments": true,
+      "skipLibCheck": true,
+      "sourceMap": true,
+      "strict": true
+   },
+   "files": ["src/@types/graphql.d.ts"],
+   "exclude": ["node_modules", "src/**/*.test.ts"],
+   "include": ["src/**/*", "test"]
 }
