--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "format": "prettier --write .",
       "test": "NODE_ENV=development jest",
       "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-      "deploy": "NODE_ENV=production sls deploy",
+      "deploy": "NODE_ENV=development sls deploy",
       "debug": "SLS_DEBUG=* NODE_ENV=development node --inspect node_modules/.bin/sls offline -s dev"
    },
    "author": "Matt Cuento",
