--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
       "format": "prettier --write .",
       "test": "NODE_ENV=development jest",
       "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+      "build": "NODE_ENV=development sls package",
       "deploy": "NODE_ENV=development sls deploy",
-      "debug": "SLS_DEBUG=* NODE_ENV=development node --inspect node_modules/.bin/sls offline -s dev"
+      "debug": "concurrently \"graphql-codegen --config codegen.yml --watch\" \"SLS_DEBUG=* NODE_ENV=development node --inspect node_modules/.bin/sls offline -s dev\""
    },
    "author": "Matt Cuento",
    "license": "ISC",
