--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "@types/graphql-iso-date": "^3.4.0",
       "apollo-server": "^2.19.1",
       "apollo-server-lambda": "^2.21.0",
+      "csv-parser": "^3.0.0",
       "graphql": "^15.4.0",
       "graphql-iso-date": "^3.6.1",
       "graphql-type-json": "^0.3.2",
