--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
    "scripts": {
       "generate": "graphql-codegen --config codegen.yml",
       "data:targets": "node data/targets.js",
+      "data:objectives": "node data/objectives.js",
       "format": "prettier --write .",
       "test": "NODE_ENV=development jest",
       "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
