--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
    "main": "apollo-server.ts",
    "scripts": {
       "generate": "graphql-codegen --config codegen.yml",
+      "data:targets": "node data/targets.js",
+      "data:objectives": "node data/objectives.js",
       "format": "prettier --write .",
       "test": "NODE_ENV=development jest",
       "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -23,6 +25,7 @@
       "@types/graphql-iso-date": "^3.4.0",
       "apollo-server": "^2.19.1",
       "apollo-server-lambda": "^2.21.0",
+      "csv-parser": "^3.0.0",
       "graphql": "^15.4.0",
       "graphql-iso-date": "^3.6.1",
       "graphql-type-json": "^0.3.2",
@@ -36,6 +39,7 @@
       "@types/chai": "^4.2.15",
       "@types/jest": "^26.0.22",
       "chai": "^4.3.1",
+      "concurrently": "^6.0.2",
       "eslint": "^7.23.0",
       "jest": "^26.6.3",
       "mocha": "^8.3.0",
