--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "data:targets": "node data/targets.js",
       "data:objectives": "node data/objectives.js",
       "data:courses": "node data/courses.js",
-      "data:taskInfos": "node data/taskInfos.js",
+      "data:tasks": "node data/tasks.js",
       "format": "prettier --write .",
       "test": "NODE_ENV=development jest",
       "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
