--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "data:objectives": "node data/objectives.js",
       "data:courses": "node data/courses.js",
       "data:tasks": "node data/tasks.js",
+      "data:progress": "node data/progress.js",
       "format": "prettier --write .",
       "test": "NODE_ENV=development jest",
       "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
