--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "node",
       "@types/jest"
     ],
+    "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
