--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,24 @@
 {
-  "compilerOptions": {
-    "types": [
-      "node",
-      "@types/jest"
-    ],
-    "resolveJsonModule": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "esnext"
-    ],
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "outDir": ".build",
-    "preserveConstEnums": true,
-    "rootDir": "./",
-    "target": "es6",
-    "removeComments": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true
-  },
-  "files": [
-    "src/@types/graphql.d.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    ".serverless",
-    ".webpack"
-  ],
-  "include": [
-    "src/**/*",
-    "test/**/*",
-    "data/**/*"
-  ]
+   "compilerOptions": {
+      "types": ["node", "@types/jest"],
+      "resolveJsonModule": true,
+      "emitDecoratorMetadata": true,
+      "esModuleInterop": true,
+      "experimentalDecorators": true,
+      "forceConsistentCasingInFileNames": true,
+      "lib": ["esnext"],
+      "module": "CommonJS",
+      "moduleResolution": "node",
+      "outDir": ".build",
+      "preserveConstEnums": true,
+      "rootDir": "./",
+      "target": "es6",
+      "removeComments": true,
+      "skipLibCheck": true,
+      "sourceMap": true,
+      "strict": true
+   },
+   "files": ["src/@types/graphql.d.ts"],
+   "exclude": ["node_modules", ".serverless", ".webpack"],
+   "include": ["src/**/*", "test/**/*", "data/**/*"]
 }
