[feature] - User Progress and Progress Overview APIs (#31)
* completed courseConten API

* completed progress APIs

* completed userprogress APIs

* added integration test with database

* remove extra import statement

* updated progress test case

* added questions batchWrite APIs

* formatted

* changed fields from optional to mandatory in graphql

* formatted code

* formatted code

* fixed error

* updated types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
    "compilerOptions": {
+      "types": ["node", "@types/jest"],
+      "resolveJsonModule": true,
       "emitDecoratorMetadata": true,
       "esModuleInterop": true,
       "experimentalDecorators": true,
@@ -17,6 +19,6 @@
       "strict": true
    },
    "files": ["src/@types/graphql.d.ts"],
-   "exclude": ["node_modules", "src/**/*.test.ts"],
-   "include": ["src/**/*", "test"]
+   "exclude": ["node_modules", ".serverless", ".webpack"],
+   "include": ["src/**/*", "test/**/*", "data/**/*"]
 }
