--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
       "data:objectives": "node data/objectives.js",
       "data:courses": "node data/courses.js",
       "data:tasks": "node data/tasks.js",
+      "data:progress": "node data/progress.js",
       "format": "prettier --write .",
       "test": "NODE_ENV=development jest",
+      "test:watch": "NODE_ENV=development jest --watchAll=true",
       "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
       "build": "NODE_ENV=development sls package",
       "deploy": "NODE_ENV=development sls deploy",
