--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
       "apollo-server": "^2.19.1",
       "apollo-server-lambda": "^2.21.0",
       "chalk": "^4.1.1",
+      "csv-parse": "^4.15.4",
       "csv-parser": "^3.0.0",
       "graphql": "^15.4.0",
       "graphql-iso-date": "^3.6.1",
