set up ci to run unit test

--- a/package.json
+++ b/package.json
@@ -10,13 +10,8 @@
       "compile": "tsc -p .",
       "compile:watch": "tsc -p . --watch",
       "generate": "graphql-codegen --config codegen.yml",
-      "data:targets": "node data/targets.js",
-      "data:courses": "node data/courses.js",
-      "data:tasks": "node data/tasks.js",
-      "data:progress": "node data/progress.js",
-      "data:frQuestions": "tsc -p .&& node ./.build/data/frQuestions.js",
       "format": "prettier --write .",
-      "test": "NODE_ENV=development jest",
+      "test": "jest --coverage",
       "test:watch": "NODE_ENV=development jest --watchAll=true",
       "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
       "build": "NODE_ENV=development sls package",
@@ -36,7 +31,6 @@
       "apollo-server-lambda": "^2.21.0",
       "chalk": "^4.1.1",
       "csv-parse": "^4.15.4",
-      "csv-parser": "^3.0.0",
       "graphql": "^15.4.0",
       "graphql-iso-date": "^3.6.1",
       "graphql-type-json": "^0.3.2",
@@ -47,7 +41,6 @@
       "@graphql-codegen/cli": "1.21.4",
       "@graphql-codegen/introspection": "1.18.2",
       "@graphql-codegen/typescript": "^1.22.0",
-      "@types/chai": "^4.2.15",
       "@types/jest": "^26.0.22",
       "@types/node": "^15.3.0",
       "@types/yargs": "^15.0.13",
@@ -59,7 +52,6 @@
       "serverless-dotenv-plugin": "^3.3.0",
       "serverless-offline": "^6.8.0",
       "serverless-webpack": "^5.3.5",
-      "superagent": "^6.1.0",
       "ts-jest": "^26.5.4",
       "ts-loader": "^8.0.17",
       "ts-node": "^9.1.1",
