--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Node.js CI Test & Deploy
 
 on:
   push:
@@ -35,5 +35,7 @@ jobs:
         EOF
     - name: Install NPM dependencies
       run: npm install
+    - name: Run unit test
+      run: npm run test
     - name: Deploy Lambda functions
       run: npm run deploy
